EXTRA_DIST =				\
	aspects.dtd			\
	features.dtd			\
	mostPredictiveFeatures.m	\
	mostPredictiveRuns.m		\
	mostProbableFeatures.m		\
	predictive_features.dtd		\
	predictive_features.xsl		\
	predictive_runs.dtd		\
	predictive_runs.xsl		\
	probable_features.dtd		\
	probable_features.xsl		\
	runs.dtd			\
	summarize.m			\
	summarizeAspects.m		\
	summarizeFeatures.m		\
	summarizeRuns.m			\
	summary.dtd			\
	summary.xsl			\
	xmlify.m
